--- a/app_client/index.html
+++ b/app_client/index.html
@@ -9,7 +9,9 @@
 <body ng-view>
 	<script src="/angular/angular.min.js"></script>
 	<script src="/lib/angular-route.js"></script>
-	<script src="/lib/angular-sanitize.js"></script>   
+	<script src="/lib/angular-sanitize.js"></script>
+	<script src="/lib/ui-bootstrap-custom-2.5.0.min.js"></script>
+    <script src="/lib/ui-bootstrap-custom-tpls-2.5.0.min.js"></script>   
 	<script src="/angular/loc8r.min.js"></script>
 	<script src="/javascripts/jquery-2.2.4.min.js"></script>
 	<script src="/bootstrap/js/bootstrap.min.js"></script>
