--- a/app_client/reviewModal/reviewModal.view.html
+++ b/app_client/reviewModal/reviewModal.view.html
@@ -1,5 +1,5 @@
 <div class="modal-content">
-	<form id="addReview" name="addReview" role="form" class="form-horizontal">
+	<form id="addReview" name="addReview" role="form" ng-submit="vm.onSubmit()" class="form-horizontal">
 		<div class="modal-header">
 			<button type="button" ng-click="vm.modal.cancel()" class="close"><span
 				aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -7,11 +7,12 @@
 					vm.locationData.locationName  }}</h4>
 				</div>
 				<div class="modal-body">
+				<div role="alert" ng-show="vm.formError" class="alert alert-danger">{{vm.formError }}</div>
+
 					<div class="form-group">
 						<label for="name" class="col-xs-2 col-sm-2 control-label">Name</label>
 						<div class="col-xs-10 col-sm-10">
-							<input id="name" name="name" required="required" ngmodel="
-							vm.formData.name" class="form-control"/>
+							<input id="name" name="name" required="required" ng-model="vm.formData.name" class="form-control"/>
 						</div>
 					</div>
 					<div class="form-group">
