login and singing in

--- a/app_client/common/directives/navigation/navigation.template.html
+++ b/app_client/common/directives/navigation/navigation.template.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
 	<div class="container">
 		<div class="navbar-header">
-		    <a href="/" class="navbar-brand">Loc8r</a>
+			<a href="/" class="navbar-brand">Loc8r</a>
 			<button type="button" data-toggle="collapse" data-target="#navbar-main"
 			class="navbar-toggle"><span class="icon-bar"></span><span class="iconbar"></
 			span><span class="icon-bar"></span></button>
@@ -9,10 +9,11 @@
 		<div id="navbar-main" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="/#about">About</a></li>
-				<li><a href="/#about">Second</a></li>
-				<li><a href="/#about">Third</a></li>
 			</ul>
-			
+			<ul class="nav navbar-nav navbar-right">
+			<li><a href="/#login/?page={{ navvm.currentPath }}">Sign in</a></li>f
+			</ul>
+
 		</div>
 		
 	</div>
