--- a/app_client/locationDetail/locationDetail.view.html
+++ b/app_client/locationDetail/locationDetail.view.html
@@ -33,7 +33,7 @@
 							<h2 class="panel-title">Facilities</h2>
 						</div>
 						<div class="panel-body">
-							<span class="label label-warning label-facility" ngrepeat="
+							<span class="label label-warning label-facility" ng-repeat="
 							facility in vm.data.location.facilities">
 							<span class="glyphicon glyphicon-ok"></span>
 							{{ facility }}
